game over functionality

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script defer src="script.js"></script>
 </head>
 
-<body>
+<body class='container'>
     <div class="game">
         <div class="score">
             SCORE: 0
