full game prepare

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 <body class='container'>
     <div class="game">
-        <div class="score">
-            SCORE: 0
+        <div class="scoreImages">
+            <div class="score">
+            </div>
+            <div class="score2"></div>
         </div>
 
         <div class="message"></div>
